--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
 
     <string-array name="status_options">
         <item>Pending</item>
-        <item>Confirm</item>
+        <item>Showed Up</item>
         <item>Cancel</item>
         <item>No Show / Absent</item>
     </string-array>
